# uhppoted-wiegand

./: .gitignore  CHANGELOG.md  LAMENT.md  LICENSE  Makefile  NOTES.md  README.md  TODO.md
breadboard/: Makefile  TODO.md  (+1 more)
m5-stack/Rev.0/firmware/tiny/: CMakeLists.txt  Makefile
m5-stack/Rev.0/firmware/tiny/src/: hwconfig.c  main.c  sys.c  usb_descriptors.c
pico/: .gitignore  CMakeLists.blink  CMakeLists.txt  IN.pio  Makefile  NOTES.md  TODO.md  blink.c  reader.c  reader.h  test.c  wiegand.c  wiegand.h
pico/base/: BLINK.pio  acl.c  buzzer.c  cli.c  hwconfig.c  led.c  read.c  relays.c  sys.c  wiegand.c  write.c
pico/base/include/: buzzer.h  cli.h  common.h  led.h  logd.h  read.h  sdcard.h  sys.h  sysled.h  tcpd.h  uart.h  usb.h  wiegand.h
pico/base/src/: BUZZER.pio  LED.pio  TPIC6B595.c  buzzer.c  cli.c  common.c  hwconfig.c  led.c  logd.c  read.c  relays.c  sdcard.c  sys.c  sys_usb.c  tcpd.c  uart.c  wiegand.c  write.c
pico/base/src/picow/: sysled.c
pico/controller/: CMakeLists.txt  Makefile
pico/controller/common/src/: cli.c  controller.c
pico/controller/pico/: CMakeLists.txt
pico/controller/pico/base/: CMakeLists.txt  Makefile
pico/controller/pico/base/src/: controller.c
pico/controller/pico/include/: cli.h
pico/controller/pico/src/: controller.c
pico/controller/pico/usb/: CMakeLists.txt  Makefile
pico/controller/pico/usb/src/: controller.c
pico/controller/picow/: CMakeLists.txt  Makefile
pico/controller/picow/base/: CMakeLists.txt  Makefile
pico/controller/picow/base/include/: controller.h
pico/controller/picow/base/src/: controller.c
pico/controller/picow/src/: controller.c  logd.c
pico/controller/picow/wifi/: CMakeLists.txt  Makefile
pico/controller/picow/wifi+usb/: CMakeLists.txt  Makefile
pico/controller/picow/wifi+usb/include/: controller.h
pico/controller/picow/wifi+usb/src/: controller.c
pico/controller/picow/wifi/src/: controller.c
pico/controller/src/: cli.c  controller.c
pico/controller/usb/: CMakeLists.txt
pico/controller/usb+wifi/: CMakeLists.txt  Makefile
pico/controller/usb+wifi/src/: controller.c
pico/controller/usb/src/: cli.c  controller.c
pico/controller/wifi/: CMakeLists.txt  Makefile
pico/controller/wifi/src/: controller.c
pico/core/include/: acl.h  cli.h  common.h  flash.h  keypad.h  picow.h  read.h  wiegand.h  write.h
pico/core/src/: READ.pio  WRITE.pio  acl.c  cli.c  common.c  flash.c  led.c  logd.c  read.c  relays.c  sdcard.c  sys.c  usb.c  write.c
pico/core/src/pico/: sysled.c
pico/core/src/picow/: cyw43.c  sysled.c  tcpd.c
pico/emulator/: CMakeLists.txt  Makefile
pico/emulator-w/: .gitignore  CMakeLists.txt  Makefile
pico/emulator-w/include/: cli.h
pico/emulator-w/src/: cli.c  emulator.c
pico/emulator-w/src/tcpd/: tcpd.c  tcpd.h
pico/emulator-w/usb/: CMakeLists.txt  Makefile
pico/emulator/common/src/: cli.c
pico/emulator/pico/: CMakeLists.txt  Makefile
pico/emulator/pico/base/: CMakeLists.txt  Makefile
pico/emulator/pico/base/include/: emulator.h
pico/emulator/pico/base/src/: emulator.c
pico/emulator/pico/usb/: CMakeLists.txt  Makefile
pico/emulator/pico/usb/src/: emulator.c
pico/emulator/picow/: CMakeLists.txt  Makefile
pico/emulator/picow/base/: CMakeLists.txt  Makefile
pico/emulator/picow/base/include/: emulator.h
pico/emulator/picow/base/src/: emulator.c
pico/emulator/picow/src/: emulator.c
pico/emulator/picow/usb/: CMakeLists.txt
pico/emulator/picow/usb/src/: emulator.c
pico/emulator/picow/wifi/: CMakeLists.txt  Makefile
pico/emulator/picow/wifi+usb/: CMakeLists.txt  Makefile
pico/emulator/picow/wifi+usb/src/: emulator.c
pico/emulator/picow/wifi/src/: emulator.c
pico/emulator/src/: cli.c  emulator.c
pico/emulator/usb/: CMakeLists.txt
pico/emulator/usb+wifi/: CMakeLists.txt  Makefile
pico/emulator/usb+wifi/src/: emulator.c
pico/emulator/usb/src/: emulator.c
pico/emulator/wifi/: CMakeLists.txt  Makefile
pico/emulator/wifi/src/: emulator.c
pico/include/: TPIC6B595.h  acl.h  cli.h  controller.h  emulator.h  led.h  reader.h  relay.h  relays.h  sdcard.h  sys.h  wiegand.h  write.h  writer.h
pico/lib/no-OS-FatFS-SD-SPI-RPi-Pico/: .gitignore
pico/lib/no-OS-FatFS-SD-SPI-RPi-Pico/FatFs_SPI/: CMakeLists.txt
pico/reference/: CMakeLists.txt  Makefile
pico/reference/common/src/: cli.c
pico/reference/pico/: CMakeLists.txt
pico/reference/pico/base/: CMakeLists.txt  Makefile
pico/reference/pico/base/src/: reference.c
pico/reference/pico/usb/: CMakeLists.txt  Makefile
pico/reference/pico/usb/include/: reference.h
pico/reference/pico/usb/src/: reference.c
pico/reference/picow/: CMakeLists.txt  Makefile
pico/reference/picow/base/: CMakeLists.txt  Makefile
pico/reference/picow/base/src/: reference.c
pico/reference/picow/src/: reference.c
pico/reference/picow/wifi/: CMakeLists.txt  Makefile
pico/reference/picow/wifi+usb/: CMakeLists.txt  Makefile
pico/reference/picow/wifi+usb/src/: reference.c
pico/reference/picow/wifi/src/: reference.c
pico/reference/src/: cli.c  reference.c
pico/reference/usb/: CMakeLists.txt  Makefile
pico/reference/usb+wifi/: CMakeLists.txt  Makefile
pico/reference/usb+wifi/src/: reference.c
pico/reference/usb/src/: cli.c  reference.c
pico/reference/wifi/: CMakeLists.txt  Makefile
pico/reference/wifi/src/: reference.c
pico/src/: BLINK.pio  BUZZER.pio  LED.pio  READ.pio  TPIC6B595.c  WRITE.pio  acl.c  buzzer.c  cli.c  controller.c  emulator.c  hwconfig.c  led.c  reader.c  relay.c  relays.c  sdcard.c  sys.c  wiegand.c  writer.c
pico/universal/common/src/: cli.c  reference.c  universal.c
pico/universal/pico/: Makefile
pico/universal/pico/base/: CMakeLists.txt  Makefile
pico/universal/pico/base/src/: universal.c
pico/universal/pico/usb/: CMakeLists.txt
pico/universal/pico/usb/src/: reference.c  universal.c
pico/universal/picow/base/: CMakeLists.txt
pico/universal/picow/base/src/: reference.c  universal.c
pico/universal/picow/wifi/: CMakeLists.txt  Makefile
pico/universal/picow/wifi+usb/: CMakeLists.txt
pico/universal/picow/wifi+usb/src/: universal.c
(+179 files in other folders)
